修正workflows資料夾名稱

--- a/SchemaMigrationTool/SchemaMigrationTool.csproj
+++ b/SchemaMigrationTool/SchemaMigrationTool.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include=".github\workflow\migrate.yml" />
+    <None Include=".github\workflows\migrate.yml" />
   </ItemGroup>
 
 </Project>
