--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   migrate:
     runs-on: windows-latest
+    env:
+      ConnectionStrings__DefaultConnection: ${{ secrets.DEFAULT_CONNECTION }}
 
     steps:
     - name: Checkout repository
