--- a/.github/workflows/build_and_push_image.yml
+++ b/.github/workflows/build_and_push_image.yml
@@ -3,6 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches: [ master ]
+  workflow_dispatch:
 
 jobs:
   build-and-push:
@@ -19,12 +20,16 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Set lowercase repo owner
+      id: vars
+      run: echo "repo_owner_lower=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
     - name: Build Docker image
       run: |
-        IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/schema-migrator
+        IMAGE_NAME=ghcr.io/${{ env.repo_owner_lower }}/schema-migrator
         docker build -t $IMAGE_NAME:latest .
 
     - name: Push Docker image
       run: |
-        IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/schema-migrator
+        IMAGE_NAME=ghcr.io/${{ env.repo_owner_lower }}/schema-migrator
         docker push $IMAGE_NAME:latest
