--- a/.github/workflows/build_and_push_image.yml
+++ b/.github/workflows/build_and_push_image.yml
@@ -1,34 +1,34 @@
-name: Build and Push Docker Image
-
-on:
-  push:
-    branches: [ master ]
-  workflow_dispatch:
-
-jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build Docker image
-        run: |
-          IMAGE_NAME=ghcr.io/gordon240722/schema-migrator
-          docker build -t $IMAGE_NAME:latest .
-
-      - name: Show repo owner
-        run: echo "repo owner: ${{ github.repository_owner }}"
-
-      - name: Push Docker image
-        run: |
-          IMAGE_NAME=ghcr.io/gordon240722/schema-migrator
-          docker push $IMAGE_NAME:latest
+ 1  name: Build and Push Docker Image
+ 2  
+ 3  on:
+ 4    push:
+ 5      branches: [ master ]
+ 6    workflow_dispatch:
+ 7  
+ 8  jobs:
+ 9    build-and-push:
+10      runs-on: ubuntu-latest
+11  
+12      steps:
+13        - name: Checkout code
+14          uses: actions/checkout@v3
+15  
+16        - name: Log in to GitHub Container Registry
+17          uses: docker/login-action@v3
+18          with:
+19            registry: ghcr.io
+20            username: ${{ github.actor }}
+21            password: ${{ secrets.GITHUB_TOKEN }}
+22  
+23        - name: Build Docker image
+24          run: |
+25            IMAGE_NAME=ghcr.io/gordon240722/schema-migrator
+26            docker build -t $IMAGE_NAME:latest .
+27  
+28        - name: Show repo owner
+29          run: echo "repo owner: ${{ github.repository_owner }}"
+30  
+31        - name: Push Docker image
+32          run: |
+33            IMAGE_NAME=ghcr.io/gordon240722/schema-migrator
+34            docker push $IMAGE_NAME:latest
