--- a/.github/workflows/build_and_push_image.yml
+++ b/.github/workflows/build_and_push_image.yml
@@ -26,7 +26,8 @@ jobs:
           docker build -t $IMAGE_NAME:latest .
 
       - name: Show repo owner
-        run: echo "repo owner: ${{ github.repository_owner }}"
+        run: |
+          echo "repo owner: ${{ github.repository_owner }}"
 
       - name: Push Docker image
         run: |
