--- a/.github/workflows/build_and_push_image.yml
+++ b/.github/workflows/build_and_push_image.yml
@@ -18,16 +18,12 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_PAT }}
 
       - name: Build Docker image
         run: |
           IMAGE_NAME=ghcr.io/gordon240722/schema-migrator
           docker build -t $IMAGE_NAME:latest .
-
-      - name: Show repo owner
-        run: |
-          echo "repo owner: ${{ github.repository_owner }}"
 
       - name: Push Docker image
         run: |
