--- a/SchemaMigrationTool/appsettings.json
+++ b/SchemaMigrationTool/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TenantSampleDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=sqlserver,1433;Database=TenantSampleDb;User Id=sa;Password=YourStrong!Passw0rd;"
   },
   "Tenants": [
     {
