--- a/.github/workflows/build_and_push_image.yml
+++ b/.github/workflows/build_and_push_image.yml
@@ -13,6 +13,38 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # 安裝正確版本的 .NET
+      - name: Setup .NET SDK
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '6.0.x'
+
+      - name: Restore dependencies
+        run: dotnet restore
+
+      # 執行測試並收集 coverage 資料
+      - name: Run Tests with Coverage
+        run: dotnet test --collect:"XPlat Code Coverage"
+          
+      # 安裝轉換工具，產出 SonarQube 格式的 coverage report
+      - name: Convert Coverage to SonarQube Format
+        run: |
+          dotnet tool install --global dotnet-reportgenerator-globaltool
+          reportgenerator -reports:**/coverage.cobertura.xml -targetdir:coverage-report -reporttypes:SonarQube
+
+      # 執行 SonarQube 掃描
+      - name: SonarQube Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        with:
+          args: >
+            -Dsonar.projectKey=Gordon240722_SchemaMigrationTool
+            -Dsonar.organization=gordon240722
+            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.sources=.
+            -Dsonar.cs.opencover.reportsPaths=coverage-report/SonarQube.xml
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
