--- a/.github/workflows/build_and_push_image.yml
+++ b/.github/workflows/build_and_push_image.yml
@@ -27,10 +27,12 @@ jobs:
         run: dotnet test --collect:"XPlat Code Coverage"
           
       # 安裝轉換工具，產出 SonarQube 格式的 coverage report
+      # 指定安裝舊版本
       - name: Convert Coverage to SonarQube Format
         run: |
-          dotnet tool install --global dotnet-reportgenerator-globaltool
-          reportgenerator -reports:**/coverage.cobertura.xml -targetdir:coverage-report -reporttypes:SonarQube
+            dotnet tool install --global dotnet-reportgenerator-globaltool --version 5.1.26
+            export PATH="$PATH:/home/runner/.dotnet/tools"
+            reportgenerator -reports:**/coverage.cobertura.xml -targetdir:coverage-report -reporttypes:SonarQube
 
       # 執行 SonarQube 掃描
       - name: SonarQube Scan
