查看coverage.cobertura.xml路徑

--- a/.github/workflows/build_and_push_image.yml
+++ b/.github/workflows/build_and_push_image.yml
@@ -25,6 +25,9 @@ jobs:
       # 執行測試並收集 coverage 資料
       - name: Run Tests with Coverage (Coverlet)
         run: dotnet test --collect:"XPlat Code Coverage"
+        
+      - name: Debug - Show coverage output
+        run: find ./TestResults -name "coverage.cobertura.xml"
           
       # 安裝轉換工具，產出 SonarQube 格式的 coverage report
       # 指定安裝舊版本
