--- a/.github/workflows/build_and_push_image.yml
+++ b/.github/workflows/build_and_push_image.yml
@@ -13,29 +13,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 安裝正確版本的 .NET
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '6.0.x'
 
       - name: Restore dependencies
-        working-directory: ./SchemaMigrationTool
-        run: dotnet restore
+        run: dotnet restore ./SchemaMigrationTool/SchemaMigrationTool.sln
 
-      # 執行測試並收集 coverage 資料
       - name: Run Tests with Coverage (Coverlet)
-        working-directory: ./SchemaMigrationTool
-        run: dotnet test --collect:"XPlat Code Coverage" --logger "console;verbosity=detailed"
+        run: dotnet test ./SchemaMigrationTool/SchemaMigrationTool.sln --collect:"XPlat Code Coverage" --logger "console;verbosity=detailed"
 
-      # 列出 coverage xml，確保有產生檔案
       - name: List coverage files
-        working-directory: ./SchemaMigrationTool
         run: find . -name "coverage.cobertura.xml"
 
-      # 安裝轉換工具，產出 SonarQube 格式的 coverage report
       - name: Convert Coverage to SonarQube Format
-        working-directory: ./SchemaMigrationTool
         run: |
           dotnet tool install --global dotnet-reportgenerator-globaltool --version 5.1.26
           export PATH="$PATH:/home/runner/.dotnet/tools"
